--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,32 @@
-requests==2.23.0
+absl-py==0.9.0
+google==2.0.3
+bleach==3.1.0
+bokeh==1.3.4
+boto==2.49.0
+Bottleneck==1.2.1
+cachetools==4.0.0
+certifi==2019.9.11
+cffi==1.12.3
+chardet==3.0.4
+Click==7.0
+cloudpickle==1.2.2
+dask==2.5.2
 Flask==1.1.1
+Flask-Cors==3.0.8
+fsspec==0.5.2
+future==0.17.1
 gunicorn==20.0.4
+h5py==2.9.0
+HeapDict==1.0.1
 html5lib==1.0.1
+idna==2.8
 Jinja2==2.10.3
 joblib==0.13.2
 json5==0.8.5
-jsonschema==3.0.2
+keyring==18.0.0
 numpy==1.16.5
 numpydoc==0.9.1
 pandas==0.25.1
-pandocfilters==1.4.2
+requests-oauthlib==1.3.0
+scikit-learn==0.22.2
+scipy==1.4.1
